--- a/src/pages/map/main.css
+++ b/src/pages/map/main.css
@@ -1,18 +1,12 @@
-/* html {
+html {
     overflow: scroll;
     overflow-x: hidden;
-} */
-
-.map-wrapper {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
 }
 
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 0px;
     background: transparent;
-} */
+}
 
 .selectable:hover {
     cursor: pointer;
