--- a/src/pages/map/main.css
+++ b/src/pages/map/main.css
@@ -1,13 +1,18 @@
-html {
-    overflow: scroll;
-    overflow-x: hidden;
+/* html {
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
-    width: 0px;
-    background: transparent;
-}
+  width: 0px;
+  background: transparent;
+} */
 
 .selectable:hover {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+.selectable > * {
+  background-color: "#B9A99C";
+  transition: all 1s;
 }
