Fixed focus offset for map sidebar

--- a/src/pages/map/main.css
+++ b/src/pages/map/main.css
@@ -1,4 +1,4 @@
-/* html {
+html {
   overflow: scroll;
   overflow-x: hidden;
 }
@@ -6,13 +6,17 @@
 ::-webkit-scrollbar {
   width: 0px;
   background: transparent;
-} */
+}
 
 .selectable:hover {
   cursor: pointer;
 }
 
 .selectable > * {
-  background-color: "#B9A99C";
-  transition: all 1s;
+  background-color: #B9A99C;
+}
+
+.selectable:hover .building {
+  fill: #998d83;
+  transition: all 0.5s;
 }
