--- a/src/main.css
+++ b/src/main.css
@@ -3,5 +3,5 @@
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0px;
-  background-color: #E0DFDF;
+  background-color: #F2F3F7 !important;
 }
