--- a/src/pages/map/main.css
+++ b/src/pages/map/main.css
@@ -12,13 +12,19 @@ html {
   cursor: pointer;
 }
 
-.selectable > * {
-  background-color: #B9A99C;
+.selectable:hover .building {
+  fill: #C7BFB9;
+  transition: all 0.4s ease infinite;
 }
 
-.selectable:hover .building {
-  fill: #998d83;
-  transition: all 0.5s;
+.selectable:hover .marker {
+  fill: #FAFAFA;
+  transition: all 0.4s ease infinite;
+}
+
+.selectable:hover .marker-title {
+  fill: #4A4540;
+  transition: all 0.4s ease infinite;
 }
 
 .selectable {
@@ -28,5 +34,5 @@ html {
 }
 
 .selectable:hover{
-  transform: scale(1.02);
+  transform: scale(1.04);
 }
